# rust-weather-toolkit

./: .gitignore  README.md  nginx.conf  weather-app.service
weather-app/: .env.example  Cargo.toml
weather-app/src/: cli.rs  gui.rs  main.rs  weather.rs  web.rs
weather-app/static/: app.js  index.html  style.css
