[package]
name = "weather-app"
version = "0.1.0"
edition = "2021"

[features]
default = ["gui"]
gui = ["eframe", "egui"]
web = ["actix-web", "actix-files"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
eframe = { version = "0.24", features = ["default"], optional = true }
egui = { version = "0.24", optional = true }
actix-web = { version = "4", optional = true }
actix-files = { version = "0.6", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }
